@@ -4,13 +4,14 @@ import java.io.IOException;
 import java.sql.SQLException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.servlet.ServletException;
-import javax.servlet.annotation.WebServlet;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+
 import it.unisa.model.StudenteBean;
 import it.unisa.model.StudenteModelDM;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.annotation.WebServlet;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 /**
  * Servlet implementation class LoginServlet
@@ -42,14 +43,14 @@ public class LoginServletStudente extends HttpServlet {
       } catch (SQLException e) {
         Logger.getGlobal().log(Level.SEVERE, e.getMessage());
       }
-      request.getSession().setAttribute("Loggato", new Boolean(true));
+      request.getSession().setAttribute("Loggato", Boolean.valueOf(true));//true
       request.getSession().setAttribute("SessionUser", stud);
-      request.getSession().setAttribute("ErroreLogin", new Boolean(false));
+      request.getSession().setAttribute("ErroreLogin", Boolean.valueOf(false));
       redirectPage = "/home-page.jsp";
 
     } else {
-      request.getSession().setAttribute("Loggato", new Boolean(false));
-      request.getSession().setAttribute("ErroreLogin", new Boolean(true));
+      request.getSession().setAttribute("Loggato", Boolean.valueOf(false));
+      request.getSession().setAttribute("ErroreLogin", Boolean.valueOf(true));
       redirectPage = "/login-page.jsp";
 
     }
