@@ -5,13 +5,13 @@ import java.sql.SQLException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import javax.servlet.ServletException;
-import javax.servlet.annotation.WebServlet;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import it.unisa.model.UfficioBean;
 import it.unisa.model.UfficioModelDM;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.annotation.WebServlet;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 /**
  * Servlet implementation class LoginServletUfficio
@@ -39,14 +39,14 @@ public class LoginServletUfficio extends HttpServlet {
       } catch (SQLException e) {
         Logger.getGlobal().log(Level.SEVERE, e.getMessage());
       }
-      request.getSession().setAttribute("Loggato", new Boolean(true));
+      request.getSession().setAttribute("Loggato", Boolean.valueOf(true));
       request.getSession().setAttribute("SessionUser", uff);
-      request.getSession().setAttribute("ErroreLogin", new Boolean(false));
+      request.getSession().setAttribute("ErroreLogin", Boolean.valueOf(false));
       redirectPage = "/home-page.jsp";
 
     } else {
-      request.getSession().setAttribute("Loggato", new Boolean(false));
-      request.getSession().setAttribute("ErroreLogin", new Boolean(true));
+      request.getSession().setAttribute("Loggato", Boolean.valueOf(false));
+      request.getSession().setAttribute("ErroreLogin", Boolean.valueOf(true));
       redirectPage = "/login-page.jsp";
 
     }
