@@ -1,17 +1,18 @@
 package it.unisa.logout;
 
 import java.io.IOException;
-import java.util.logging.Logger;
 import java.util.logging.Level;
-import javax.servlet.RequestDispatcher;
-import javax.servlet.ServletException;
-import javax.servlet.annotation.WebServlet;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
+import java.util.logging.Logger;
 
 import org.json.JSONObject;
+
+import jakarta.servlet.RequestDispatcher;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.annotation.WebServlet;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
 
 @WebServlet("/LogoutTutorServlet")
 public class LogoutTutorServlet extends HttpServlet {
@@ -38,13 +39,13 @@ public class LogoutTutorServlet extends HttpServlet {
         redirectPage = "login-page.jsp";
       } else {
         redirectPage = "500-error.jsp";
-        request.setAttribute("ErroreLogout", new Boolean(true));
+        request.setAttribute("ErroreLogout", Boolean.valueOf(true));
         response.sendRedirect(request.getContextPath() + redirectPage);
         Logger.getGlobal().log(Level.SEVERE, "Logout Without Login");
       }
     } else {
       redirectPage = "500-error.jsp";
-      request.setAttribute("ErroreLogout", new Boolean(true));
+      request.setAttribute("ErroreLogout", Boolean.valueOf(true));
       response.sendRedirect(request.getContextPath() + redirectPage);
       Logger.getGlobal().log(Level.SEVERE, "Logout Without Session");
     }
